--- a/juego.html
+++ b/juego.html
@@ -102,7 +102,7 @@
       const naranja = document.getElementById('naranja')
       const verde = document.getElementById('verde')
       const btnEmpezar = document.getElementById('btnEmpezar')
-      const ultimoNivel = 10
+      const ultimoNivel = 5
 
       class Juego {
         constructor() {
@@ -185,6 +185,12 @@
            this.colores[color].removeEventListener('click', this.elegirColor)
           }
         }
+        nivelSuperado() {
+          swal('Yeah!', '¡Felicidades, nivel superado!', 'success')
+          .then(() => {
+            setTimeout(this.siguienteNivel, 1500)
+          })
+        }
         ganoJuego() {
           swal('Nice', '¡Felicidades, has completado el juego!', 'success')
           .then(this.inicializar())
@@ -208,7 +214,7 @@
               if (this.nivel === (ultimoNivel + 1)) {
                 this.ganoJuego()
               } else {
-                setTimeout(this.siguienteNivel, 1500)
+                this.nivelSuperado()
               }
             }
           } else {
